k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp
  labels:
    app.kubernetes.io/name: chatapp
spec:
  selector:
    app.kubernetes.io/name: chatapp
  ports:
    - name: http
      port: 80
      targetPort: http
  type: nodePort
